# met-office-deterministic

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: continuous-integration.yml  docs.yml  pypi.yml  release-please.yml
docs/: example.ipynb
docs/api/: constants.md  href.md  index.md  stac.md
docs/stylesheets/: extra.css
examples/: 20251001T0000Z-20251001T0000Z.json  20251001T0000Z-20251001T0100Z.json  20251001T0000Z-20251001T0200Z.json  catalog.json
examples/met-office-global-deterministic-10km-height/: collection.json
examples/met-office-global-deterministic-10km-height/20251001T0000Z-20251001T0000Z/: 20251001T0000Z-20251001T0000Z.json
examples/met-office-global-deterministic-10km-height/20251001T0000Z-20251001T0100Z/: 20251001T0000Z-20251001T0100Z.json
examples/met-office-global-deterministic-10km-height/20251001T0000Z-20251001T0200Z/: 20251001T0000Z-20251001T0200Z.json
examples/met-office-global-deterministic-10km-pressure/: collection.json
examples/met-office-global-deterministic-10km-pressure/20251001T0000Z-20251001T0000Z/: 20251001T0000Z-20251001T0000Z.json
examples/met-office-global-deterministic-10km-pressure/20251001T0000Z-20251001T0100Z/: 20251001T0000Z-20251001T0100Z.json
examples/met-office-global-deterministic-10km-pressure/20251001T0000Z-20251001T0200Z/: 20251001T0000Z-20251001T0200Z.json
examples/met-office-global-deterministic-10km-surface/: collection.json
examples/met-office-global-deterministic-10km-surface/20251001T0000Z-20251001T0000Z/: 20251001T0000Z-20251001T0000Z.json
examples/met-office-global-deterministic-10km-surface/20251001T0000Z-20251001T0100Z/: 20251001T0000Z-20251001T0100Z.json
examples/met-office-global-deterministic-10km-surface/20251001T0000Z-20251001T0200Z/: 20251001T0000Z-20251001T0200Z.json
examples/met-office-global-deterministic-height/: collection.json
examples/met-office-global-deterministic-height/20250614T0000Z-20250614T0000Z/: 20250614T0000Z-20250614T0000Z.json
examples/met-office-global-deterministic-height/20250614T0000Z-20250614T0100Z/: 20250614T0000Z-20250614T0100Z.json
examples/met-office-global-deterministic-height/20250614T0000Z-20250614T0200Z/: 20250614T0000Z-20250614T0200Z.json
examples/met-office-global-deterministic-height/20250614T0000Z-20250614T0300Z/: 20250614T0000Z-20250614T0300Z.json
examples/met-office-global-deterministic-height/20250614T0000Z-20250614T0400Z/: 20250614T0000Z-20250614T0400Z.json
examples/met-office-global-deterministic-height/20250614T0000Z-20250614T0500Z/: 20250614T0000Z-20250614T0500Z.json
examples/met-office-global-deterministic-height/20250614T0000Z-20250614T0600Z/: 20250614T0000Z-20250614T0600Z.json
examples/met-office-global-deterministic-height/20250614T0000Z-20250614T0700Z/: 20250614T0000Z-20250614T0700Z.json
examples/met-office-global-deterministic-height/20250614T0000Z-20250614T0800Z/: 20250614T0000Z-20250614T0800Z.json
examples/met-office-global-deterministic-height/20250614T0000Z-20250614T0900Z/: 20250614T0000Z-20250614T0900Z.json
examples/met-office-global-deterministic-height/20250614T0000Z-20250614T1000Z/: 20250614T0000Z-20250614T1000Z.json
examples/met-office-global-deterministic-height/20250614T0000Z-20250614T1100Z/: 20250614T0000Z-20250614T1100Z.json
examples/met-office-global-deterministic-height/20250614T0000Z-20250614T1200Z/: 20250614T0000Z-20250614T1200Z.json
examples/met-office-global-deterministic-height/20250614T0000Z-20250614T1300Z/: 20250614T0000Z-20250614T1300Z.json
examples/met-office-global-deterministic-height/20250614T0000Z-20250614T1400Z/: 20250614T0000Z-20250614T1400Z.json
examples/met-office-global-deterministic-height/20250614T0000Z-20250614T1500Z/: 20250614T0000Z-20250614T1500Z.json
examples/met-office-global-deterministic-height/20250614T0000Z-20250614T1600Z/: 20250614T0000Z-20250614T1600Z.json
examples/met-office-global-deterministic-height/20250614T0000Z-20250614T1700Z/: 20250614T0000Z-20250614T1700Z.json
examples/met-office-global-deterministic-height/20250614T0000Z-20250614T1800Z/: 20250614T0000Z-20250614T1800Z.json
examples/met-office-global-deterministic-near-surface/: collection.json
examples/met-office-global-deterministic-pressure/: collection.json
examples/met-office-global-deterministic-pressure-level/: collection.json
examples/met-office-global-deterministic-whole-atmosphere/: collection.json
examples/met-office-uk-deterministic-2km-height/: collection.json
examples/met-office-uk-deterministic-2km-pressure/: collection.json
examples/met-office-uk-deterministic-2km-surface/: collection.json
examples/met-office-uk-deterministic-height/: collection.json
examples/met-office-uk-deterministic-near-surface/: collection.json
examples/met-office-uk-deterministic-pressure/: collection.json
examples/met-office-uk-deterministic-pressure-level/: collection.json
examples/met-office-uk-deterministic-whole-atmosphere/: collection.json
scripts/: planetary-computer-update  update-examples
tests/: conftest.py  test_constants.py  test_href.py  test_stac.py
tests/fixtures/: obstore.py  s3-ls-global-20250614T0000Z.txt  s3-ls-uk-20250614T0000Z.txt
(+1627 files in other folders)
