[project]
name = "stactools-met-office-deterministic"
version = "0.1.0"
description = "Python package for generating STAC metadata for the Met Office Deterministic Numerical Weather Prediction model"
readme = "README.md"
authors = [
    { name = "Henry Rodman", email = "henry@developmentseed.org" },
    { name = "Pete Gadomski", email = "pete.gadomski@gmail.com" },
]
keywords = ["stactools", "pystac", "catalog", "STAC"]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.11"
dependencies = [
    "pystac>=1.14.1",
    "shapely>=2.1.2",
]

[dependency-groups]
dev = [
    "codespell>=2.4.1",
    "mypy>=1.18.2",
    "obstore>=0.8.2",
    "pre-commit>=4.3.0",
    "pystac[validation]>=1.14.1",
    "pytest>=8.4.2",
    "ruff>=0.14.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stactools"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
]

[tool.mypy]
explicit_package_bases = true
namespace_packages = true
show_error_codes = true
strict = true
mypy_path = "src"

[tool.ruff]
lint.select = ["E", "F", "I"]
